@@ -14,6 +14,12 @@ import org.json.JSONObject;
 import model.logic.Player;
 import utils.Pair;
 
+/**
+ * This class is in charge of creating the server connection, get
+ * data from ServerView and CreateGameDialog, creating the first
+ * completed game JSON, as well as processing the data sent by clients.
+ * @author PMC
+ */
 
 public class Server {
 	
@@ -31,27 +37,50 @@ public class Server {
 	
 	private JSONObject gameConfigJSON;
 
+	/**
+	 * Constructor. It stores a primitive version of the JSON that
+	 * contains the information of the game, as well as being in charge
+	 * of calling ServerView to get the connection data.
+	 * @param gameConfigJSON Primitive version of the JSON that contains the information of the game
+	 * specified by CreateGameDialog
+	 */
 	public Server(JSONObject gameConfigJSON) {
 		this.gameConfigJSON = gameConfigJSON;
 		loadExpectedPlayers();
 		sv = new ServerView(this);
 	}
 	
+	/**
+	 * This method creates a ServerSocket given the given port from GUI.
+	 * Then, it calls waitForPlayers the perform the expected connections
+	 * @param port Integer that specifies the port in which user has specified to open the connection
+	 * specified by CreateGameDialog.
+	 */
 	public void start(int port) throws IOException {
 		serverSocket = new ServerSocket(port);
 		waitForPlayers();
 	}
 	
-
+	/**
+	 * This method stops the server
+	 */
 	public void stop() {
 		System.exit(0);
 	}
 	
+	/**
+	 * This method loads the expectedPlayers value so that the server can
+	 * know which number of players to connect is expected
+	 */
 	private void loadExpectedPlayers() {
 		expectedPlayers = gameConfigJSON.getJSONArray("players").length();
 	}
 
-
+	/**
+	 * This method creates all the connections expected from the number of players,
+	 * completes the game JSON which the additional information sent by clients,
+	 * and send to each client a finally completed game JSON
+	 */
 	private void waitForPlayers() throws IOException {
 	
 		for (int i = 0; i < expectedPlayers; ++i) {
@@ -75,31 +104,36 @@ public class Server {
 		sv.updateNumPlayers();
 		
 		
-	}
+		}
 	
-	if (gameConfigJSON.get("type").equals("GameTeams")) {
-		for (int i = 0; i < clients.size(); ++i) {
-			clients.get(i).getFirst().notifyClientToChooseTeam(gameConfigJSON);
+		if (gameConfigJSON.get("type").equals("GameTeams")) {
+			for (int i = 0; i < clients.size(); ++i) {
+				clients.get(i).getFirst().notifyClientToChooseTeam(gameConfigJSON);
+			}
+			
+			waitForAllPlayersToChooseTeam();
+			
+			completeGameConfigTeams();
+			
 		}
 		
-		waitForAllPlayersToChooseTeam();
 		
-		completeGameConfigTeams();
+		JSONArray playersJSONArray = getPlayersJSONArray();
 		
-	}
-	
-	
-	JSONArray playersJSONArray = getPlayersJSONArray();
-	
-	this.gameConfigJSON.put("players", playersJSONArray);
-	this.gameConfigJSON.put("turn", clients.get(0).getSecond().getColor().toString());
-	
-	for (int i = 0; i < clients.size(); ++i) {
-		clients.get(i).getFirst().updateGraphics(gameConfigJSON);
-	}
+		this.gameConfigJSON.put("players", playersJSONArray);
+		this.gameConfigJSON.put("turn", clients.get(0).getSecond().getColor().toString());
+		
+		for (int i = 0; i < clients.size(); ++i) {
+			clients.get(i).getFirst().updateGraphics(gameConfigJSON);
+		}
 
 	}
 	
+	/**
+	 * This method creates a JSONArray from the info sent by all the clients' player
+	 * connected to the server
+	 * @return The JSONArray that represents all players' information
+	 */
 	private JSONArray getPlayersJSONArray() {
 		JSONArray playersJSONArray = new JSONArray();
 		
@@ -112,6 +146,11 @@ public class Server {
 	}
 
 
+	/**
+	 * This synchronized method allows server to process the information
+	 * sent by a client and perform several tasks depending on the nature
+	 * of the information sent (i.e. the type of notification)
+	 */
 	public synchronized void receiveFromClient(JSONObject json, ServerClient client) {
 		
 		String notification = json.getString("notification");
@@ -135,7 +174,10 @@ public class Server {
 		}		
 	}
 
-
+	/**
+	 * This method is used to completed the first completed game JSON from the information
+	 * sent by clients
+	 */
 	private void completeGameConfigTeams() {
 		
 		JSONArray teamsArray = gameConfigJSON.getJSONArray("teams");
@@ -171,6 +213,10 @@ public class Server {
 	}
 
 
+	/**
+	 * This synchronized method is used to stop server's game processing methods until
+	 * all players have been connected.
+	 */
 	public synchronized void waitForAllPlayersToChooseTeam() {
 		
 		while ((mapClientTeam.size() != expectedPlayers)) {
@@ -184,10 +230,20 @@ public class Server {
 		}
 	}
 	
+	/**
+	 * This method returns the expected number of players to be connected,
+	 * specified previously by GUI
+	 * @return Integer that represents the number of players to be connected
+	 */
 	public int getExpectedPlayers() {
 		return this.expectedPlayers;
 	}
 	
+	/**
+	 * This method returns the number of players that have been already connected
+	 * so that it can be shown in GUI to send feedback to user
+	 * @return Integer that represents the number of players that have been already connected
+	 */
 	public int getNumPlayers() {
 		return this.clients.size();
 	}
